feat(attachments): enhance upload validation and fallback mechanisms
- Added file extension allow-list (`ATTACHMENT_ALLOWED_EXTENSIONS`) and improved size limits (`ATTACHMENT_MAX_FILE_SIZE`, `ATTACHMENT_MAX_UPLOAD_SIZE`) for more robust upload validation.
- Derived content type server-side for safer handling of client-supplied headers, avoiding download and rendering errors.
- Updated fallback for malformed content types during attachment download to prevent `500 Internal Server Error`.
- Enhanced documentation for operator settings, upload validation, and scoped duplication rules.