@@ -1,7 +1,6 @@
 package com.hamstrack.issue.service;
 
 import com.hamstrack.issue.entity.*;
-import com.hamstrack.issue.repository.*;
 import com.hamstrack.project.entity.Project;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
@@ -13,48 +12,40 @@ import java.util.List;
 
 /**
  * Resolves a project's <em>effective</em> taxonomy: its bound workflow and
- * priority set, falling back to the system defaults when the binding is NULL.
- * All issue read/write paths and the public project-config endpoint go
+ * priority/type sets, falling back to the system defaults when the binding is
+ * NULL. All issue read/write paths and the public project-config endpoint go
  * through here — nothing else may interpret bindings.
+ *
+ * <p>The underlying catalog reads are cached (see {@link ProjectConfigCache} /
+ * {@code CacheConfig}); this class stays the single place that maps a project to
+ * its effective ids and enforces membership/transition rules against the cached
+ * lists. A catalog edit propagates within the cache TTL (~60s).
  */
 @Service
 @RequiredArgsConstructor
 public class ProjectConfigService {
 
-    private final WorkflowRepository workflowRepository;
-    private final WorkflowStatusRepository workflowStatusRepository;
-    private final WorkflowTransitionRepository workflowTransitionRepository;
-    private final PrioritySetRepository prioritySetRepository;
-    private final PrioritySetItemRepository prioritySetItemRepository;
-    private final IssueTypeSetRepository issueTypeSetRepository;
-    private final IssueTypeSetItemRepository issueTypeSetItemRepository;
+    private final ProjectConfigCache cache;
 
     @Transactional(readOnly = true)
     public Workflow effectiveWorkflow(Project project) {
-        if (project.getWorkflow() != null) return project.getWorkflow();
-        return workflowRepository.findBySystemDefaultTrue()
-                .orElseThrow(() -> new IllegalStateException("System default workflow is missing"));
+        return project.getWorkflow() != null ? project.getWorkflow() : cache.systemDefaultWorkflow();
     }
 
     @Transactional(readOnly = true)
     public PrioritySet effectivePrioritySet(Project project) {
-        if (project.getPrioritySet() != null) return project.getPrioritySet();
-        return prioritySetRepository.findBySystemDefaultTrue()
-                .orElseThrow(() -> new IllegalStateException("System default priority set is missing"));
+        return project.getPrioritySet() != null ? project.getPrioritySet() : cache.systemDefaultPrioritySet();
     }
 
     @Transactional(readOnly = true)
     public IssueTypeSet effectiveTypeSet(Project project) {
-        if (project.getIssueTypeSet() != null) return project.getIssueTypeSet();
-        return issueTypeSetRepository.findBySystemDefaultTrue()
-                .orElseThrow(() -> new IllegalStateException("System default issue type set is missing"));
+        return project.getIssueTypeSet() != null ? project.getIssueTypeSet() : cache.systemDefaultTypeSet();
     }
 
     /** Issue types offered by the project, in the set's display order. */
     @Transactional(readOnly = true)
     public List<IssueType> types(Project project) {
-        return issueTypeSetItemRepository.findAllBySetOrderByPosition(effectiveTypeSet(project))
-                .stream().map(IssueTypeSetItem::getType).toList();
+        return cache.typesForSet(effectiveTypeSet(project).getId());
     }
 
     /**
@@ -64,8 +55,8 @@ public class ProjectConfigService {
      */
     @Transactional(readOnly = true)
     public IssueType requireTypeInSet(Project project, IssueType type) {
-        if (!issueTypeSetItemRepository.existsBySetAndType(effectiveTypeSet(project), type)) {
-            throw new ResponseStatusException(HttpStatus.UNPROCESSABLE_ENTITY,
+        if (types(project).stream().noneMatch(t -> t.getId().equals(type.getId()))) {
+            throw new ResponseStatusException(HttpStatus.UNPROCESSABLE_CONTENT,
                     "Issue type '" + type.getName() + "' is not offered by this project");
         }
         return type;
@@ -74,27 +65,25 @@ public class ProjectConfigService {
     /** Statuses of the project's workflow in board-column order. */
     @Transactional(readOnly = true)
     public List<Status> statuses(Project project) {
-        return workflowStatusRepository.findAllByWorkflowOrderByPosition(effectiveWorkflow(project))
-                .stream().map(WorkflowStatus::getStatus).toList();
+        return cache.statusesForWorkflow(effectiveWorkflow(project).getId());
     }
 
     /** Priority set items of the project in display order. */
     @Transactional(readOnly = true)
     public List<PrioritySetItem> priorityItems(Project project) {
-        return prioritySetItemRepository.findAllBySetOrderByPosition(effectivePrioritySet(project));
+        return cache.priorityItemsForSet(effectivePrioritySet(project).getId());
     }
 
     @Transactional(readOnly = true)
     public List<WorkflowTransition> transitions(Project project) {
-        return workflowTransitionRepository.findAllByWorkflow(effectiveWorkflow(project));
+        return cache.transitionsForWorkflow(effectiveWorkflow(project).getId());
     }
 
     /** 422 unless the status belongs to the project's workflow. */
     @Transactional(readOnly = true)
     public Status requireStatusInWorkflow(Project project, Status status) {
-        var workflow = effectiveWorkflow(project);
-        if (!workflowStatusRepository.existsByWorkflowAndStatus(workflow, status)) {
-            throw new ResponseStatusException(HttpStatus.UNPROCESSABLE_ENTITY,
+        if (statuses(project).stream().noneMatch(s -> s.getId().equals(status.getId()))) {
+            throw new ResponseStatusException(HttpStatus.UNPROCESSABLE_CONTENT,
                     "Status '" + status.getName() + "' is not part of this project's workflow");
         }
         return status;
@@ -106,21 +95,25 @@ public class ProjectConfigService {
         boolean offered = priorityItems(project).stream()
                 .anyMatch(i -> i.getPriority().getId().equals(priority.getId()));
         if (!offered) {
-            throw new ResponseStatusException(HttpStatus.UNPROCESSABLE_ENTITY,
+            throw new ResponseStatusException(HttpStatus.UNPROCESSABLE_CONTENT,
                     "Priority '" + priority.getName() + "' is not offered by this project");
         }
         return priority;
     }
 
-    /** Default priority for new issues (first item flagged default, else first item). */
+    /**
+     * Default priority id for new issues (first item flagged default, else first
+     * item). Returns the id, not the cached entity — the caller re-resolves it to
+     * a managed instance before assigning it to an issue.
+     */
     @Transactional(readOnly = true)
-    public Priority defaultPriority(Project project) {
+    public java.util.UUID defaultPriorityId(Project project) {
         var items = priorityItems(project);
         if (items.isEmpty()) {
             throw new IllegalStateException("Priority set of project " + project.getId() + " is empty");
         }
         return items.stream().filter(PrioritySetItem::isDefaultForNewIssues)
-                .findFirst().orElse(items.get(0)).getPriority();
+                .findFirst().orElse(items.getFirst()).getPriority().getId();
     }
 
     /**
@@ -131,8 +124,7 @@ public class ProjectConfigService {
      */
     @Transactional(readOnly = true)
     public void validateTransition(Project project, Status from, Status to) {
-        var workflow = effectiveWorkflow(project);
-        var all = workflowTransitionRepository.findAllByWorkflow(workflow);
+        var all = transitions(project);
         boolean restricted = all.stream()
                 .anyMatch(t -> t.getFromStatus() != null && t.getFromStatus().getId().equals(from.getId()));
         if (!restricted) return;
@@ -140,7 +132,7 @@ public class ProjectConfigService {
                 .filter(t -> t.getFromStatus() == null || t.getFromStatus().getId().equals(from.getId()))
                 .anyMatch(t -> t.getToStatus().getId().equals(to.getId()));
         if (!ok) {
-            throw new ResponseStatusException(HttpStatus.UNPROCESSABLE_ENTITY,
+            throw new ResponseStatusException(HttpStatus.UNPROCESSABLE_CONTENT,
                     "Transition from '" + from.getName() + "' to '" + to.getName()
                             + "' is not allowed by the workflow");
         }
